--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "jinja2>=2.11.3",
     "numpy>=1.24.4",
     "PyJWT>=2.8.0",
+    "sqlparse>=0.5.2"
 ]
 
 [[project.authors]]
