数据库侧安全限制测试完成

--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -1,17 +1,18 @@
 # MySQL数据库配置
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
+#MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
+#MYSQL_PORT=3306
+#MYSQL_USER=onedba
+#MYSQL_PASSWORD=S9dKSCsdJm(mKd2
+#MYSQL_DATABASE=du_trade_timeout_db_3
 MYSQL_ROLE=readonly
 DB_CONNECTION_TIMEOUT=5
 
 # MySQL 8.0 认证插件配置
-# - mysql_native_password: 兼容性好，不需要额外依赖，但安全性较低
-# - caching_sha2_password: MySQL 8.0 默认，安全性高，需要 cryptography 包
-# 如果使用 MySQL 8.0 且用户采用 caching_sha2_password，请确保已安装 cryptography 包
-# 认证插件类型
 DB_AUTH_PLUGIN=invalid_plugin
 
 # 数据库连接池配置
@@ -73,3 +74,5 @@ DATABASE_ACCESS_LEVEL=permissive
 # 日志配置
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=DEBUG
+
+DB_POL_MAX_SIZE=500
