--- a/requirements.txt
+++ b/requirements.txt
@@ -182,6 +182,8 @@ sniffio==1.3.1
     # via
     #   anyio
     #   openai
+sqlparse==0.5.3
+    # via mcp-for-db (pyproject.toml)
 sse-starlette==2.4.1
     # via mcp
 starlette==0.47.1
@@ -220,5 +222,3 @@ urllib3==2.5.0
     # via requests
 uvicorn==0.35.0
     # via mcp
-
-sqlparse~=0.5.2
