--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mcp_for_db"
 version = "0.1.0"
 description = "Continuously develop integrated MCP servers dedicated to databases to advance the application of AI for DB."
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "cryptography>=42.0.6",
     "mcp[cli]>=1.3.0",
@@ -31,6 +31,10 @@ name = "liuhz"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+# 控制台脚本入口
+[project.scripts]
+dw_mcp_for_db = "server.mcp.cli:stdio_entry"
 
 [tool.hatch.build]
 packages = ["src"]
