--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -4,12 +4,21 @@
 #MYSQL_USER=videx
 #MYSQL_PASSWORD=password
 #MYSQL_DATABASE=tpch_tiny
+#MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
+#MYSQL_PORT=3306
+#MYSQL_USER=onedba
+#MYSQL_PASSWORD=S9dKSCsdJm(mKd2
+#MYSQL_DATABASE=du_trade_timeout_db_3
+#MYSQL_ROLE=readonly
+#DB_CONNECTION_TIMEOUT=5
+
 MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
 MYSQL_PORT=3306
 MYSQL_USER=onedba
 MYSQL_PASSWORD=S9dKSCsdJm(mKd2
 MYSQL_DATABASE=du_trade_timeout_db_3
 MYSQL_ROLE=readonly
+
 DB_CONNECTION_TIMEOUT=5
 
 # MySQL 8.0 认证插件配置
@@ -74,5 +83,3 @@ DATABASE_ACCESS_LEVEL=permissive
 # 日志配置
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=DEBUG
-
-DB_POL_MAX_SIZE=500
