--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "mcp_for_db"
-version = "0.0.1"
+version = "0.1.1"
+license = { text = "MIT" }
 description = "Continuously develop integrated MCP servers dedicated to databases to advance the application of AI for DB."
 readme = "README.md"
 requires-python = ">=3.12"
@@ -19,7 +20,8 @@ dependencies = [
     "jinja2>=2.11.3",
     "numpy>=1.24.4",
     "PyJWT>=2.8.0",
-    "sqlparse>=0.5.2"
+    "sqlparse>=0.5.2",
+    "contextvars>=2.0"
 ]
 
 [[project.authors]]
@@ -34,10 +36,15 @@ build-backend = "hatchling.build"
 
 # 控制台脚本入口
 [project.scripts]
-dw_mcp_for_db = "server.mcp.cli:stdio_entry"
+mcp_for_db = "server.mcp.cli:stdio_entry"
 
 [tool.hatch.build]
 packages = ["src"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/server"]
+
+[project.urls]
+Homepage = "https://github.com/flyboy711/mcp-for-db"
+Documentation = "https://github.com/flyboy711/mcp-for-db/blob/main/README.md"
+Repository = "https://github.com/flyboy711/mcp-for-db.git"
