--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ click==8.2.1
     #   streamlit
     #   typer
     #   uvicorn
+contextvars==2.4
+    # via mcp-for-db (pyproject.toml)
 contourpy==1.3.2
     # via matplotlib
 cryptography==45.0.5
@@ -66,6 +68,8 @@ idna==3.10
     #   anyio
     #   httpx
     #   requests
+immutables==0.21
+    # via contextvars
 jinja2==3.1.6
     # via
     #   mcp-for-db (pyproject.toml)
