--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -1,9 +1,10 @@
 # MySQL数据库配置
-#MYSQL_HOST=localhost
-#MYSQL_PORT=13308
-#MYSQL_USER=videx
-#MYSQL_PASSWORD=password
-#MYSQL_DATABASE=tpch_tiny
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
+
 #MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
 #MYSQL_PORT=3306
 #MYSQL_USER=onedba
@@ -12,15 +13,13 @@
 #MYSQL_ROLE=readonly
 #DB_CONNECTION_TIMEOUT=5
 
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
-MYSQL_ROLE=readonly
+#MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
+#MYSQL_PORT=3306
+#MYSQL_USER=onedba
+#MYSQL_PASSWORD=S9dKSCsdJm(mKd2
+#MYSQL_DATABASE=du_trade_timeout_db_3
 
 DB_CONNECTION_TIMEOUT=5
-
 # MySQL 8.0 认证插件配置
 DB_AUTH_PLUGIN=caching_sha2_password
 
@@ -55,17 +54,17 @@ ENV_TYPE=development
 
 # 安全配置
 # 允许的风险等级: LOW(查询), MEDIUM(安全修改), HIGH(结构变更), CRITICAL(危险操作)
-ALLOWED_RISK_LEVELS=LOW,MEDIUM,HIGH
+ALLOWED_RISK_LEVELS=LOW
 
 # 是否允许查询敏感字段信息(密码，凭证等)
 ALLOW_SENSITIVE_INFO=false
 
 # 最大SQL语句长度限制
-MAX_SQL_LENGTH=5000
+MAX_SQL_LENGTH=1000
 
 # 阻止的SQL模式，多个模式用逗号分隔
 # 例如: 'DROP TABLE,DROP DATABASE,DELETE FROM' 将阻止包含这些字符串的查询
-BLOCKED_PATTERNS=
+BLOCKED_PATTERNS='DROP TABLE,DROP DATABASE,DELETE FROM'
 
 # 是否启用查询安全检查
 ENABLE_QUERY_CHECK=true
@@ -79,8 +78,3 @@ ENABLE_DATABASE_ISOLATION=false
 # - permissive: 可以访问所有数据库（默认）
 # 注意：生产环境(ENV_TYPE=production)会自动启用数据库隔离并设为restricted模式
 DATABASE_ACCESS_LEVEL=permissive
-
-# 日志配置
-# DEBUG, INFO, WARNING, ERROR, CRITICAL
-LOG_LEVEL=DEBUG
-
