--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "mcp_for_db"
-version = "0.2.0"
+name = "mcp-for-db"
+version = "0.7.0"
 license = { text = "MIT" }
 description = "Continuously develop integrated MCP servers dedicated to databases to advance the application of AI for DB."
 readme = "README.md"
@@ -8,20 +8,16 @@ requires-python = ">=3.12"
 dependencies = [
     "cryptography>=42.0.6",
     "mcp[cli]>=1.3.0",
-    "mysqlclient>=2.2.7",
-    "openai>=1.82.1",
-    "pymysql>=1.1.1",
     "mysql-connector-python>=9.2.0",
     "python-dotenv>=0.16.0",
-    "streamlit>=1.45.1",
     "pypinyin>=0.54.0",
     "aiomysql>=0.1.0",
-    "matplotlib>=3.6.0",
     "jinja2>=2.11.3",
-    "numpy>=1.24.4",
     "PyJWT>=2.8.0",
     "sqlparse>=0.5.2",
-    "contextvars>=2.0"
+    "contextvars>=2.0",
+    "starlette>=0.46.1",
+    "uvicorn>=0.34.0"
 ]
 
 [[project.authors]]
@@ -36,7 +32,7 @@ build-backend = "hatchling.build"
 
 # 控制台脚本入口
 [project.scripts]
-mcp_for_db = "server.mcp.cli:stdio_entry"
+mcp-for-db = "server.mcp.cli:stdio_entry"
 
 [tool.hatch.build]
 packages = ["src"]
