--- a/requirements.txt
+++ b/requirements.txt
@@ -2,55 +2,32 @@
 #    uv pip compile pyproject.toml -o requirements.txt
 aiomysql==0.2.0
     # via mcp-for-db (pyproject.toml)
-altair==5.5.0
-    # via streamlit
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
     # via
     #   httpx
     #   mcp
-    #   openai
     #   sse-starlette
     #   starlette
 attrs==25.3.0
     # via
     #   jsonschema
     #   referencing
-blinker==1.9.0
-    # via streamlit
-cachetools==6.1.0
-    # via streamlit
 certifi==2025.7.9
     # via
     #   httpcore
     #   httpx
-    #   requests
 cffi==1.17.1
     # via cryptography
-charset-normalizer==3.4.2
-    # via requests
 click==8.2.1
     # via
-    #   streamlit
     #   typer
     #   uvicorn
 contextvars==2.4
     # via mcp-for-db (pyproject.toml)
-contourpy==1.3.2
-    # via matplotlib
 cryptography==45.0.5
     # via mcp-for-db (pyproject.toml)
-cycler==0.12.1
-    # via matplotlib
-distro==1.9.0
-    # via openai
-fonttools==4.58.5
-    # via matplotlib
-gitdb==4.0.12
-    # via gitpython
-gitpython==3.1.44
-    # via streamlit
 h11==0.16.0
     # via
     #   httpcore
@@ -58,103 +35,49 @@ h11==0.16.0
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
-    # via
-    #   mcp
-    #   openai
+    # via mcp
 httpx-sse==0.4.1
     # via mcp
 idna==3.10
     # via
     #   anyio
     #   httpx
-    #   requests
 immutables==0.21
     # via contextvars
 jinja2==3.1.6
-    # via
-    #   mcp-for-db (pyproject.toml)
-    #   altair
-    #   pydeck
-jiter==0.10.0
-    # via openai
+    # via mcp-for-db (pyproject.toml)
 jsonschema==4.24.0
-    # via
-    #   altair
-    #   mcp
+    # via mcp
 jsonschema-specifications==2025.4.1
     # via jsonschema
-kiwisolver==1.4.8
-    # via matplotlib
 markdown-it-py==3.0.0
     # via rich
 markupsafe==3.0.2
     # via jinja2
-matplotlib==3.10.3
-    # via mcp-for-db (pyproject.toml)
 mcp==1.11.0
     # via mcp-for-db (pyproject.toml)
 mdurl==0.1.2
     # via markdown-it-py
 mysql-connector-python==9.3.0
     # via mcp-for-db (pyproject.toml)
-mysqlclient==2.2.7
-    # via mcp-for-db (pyproject.toml)
-narwhals==1.46.0
-    # via altair
-numpy==2.3.1
-    # via
-    #   mcp-for-db (pyproject.toml)
-    #   contourpy
-    #   matplotlib
-    #   pandas
-    #   pydeck
-    #   streamlit
-openai==1.95.1
-    # via mcp-for-db (pyproject.toml)
-packaging==25.0
-    # via
-    #   altair
-    #   matplotlib
-    #   streamlit
-pandas==2.3.1
-    # via streamlit
-pillow==11.3.0
-    # via
-    #   matplotlib
-    #   streamlit
-protobuf==6.31.1
-    # via streamlit
-pyarrow==20.0.0
-    # via streamlit
 pycparser==2.22
     # via cffi
 pydantic==2.11.7
     # via
     #   mcp
-    #   openai
     #   pydantic-settings
 pydantic-core==2.33.2
     # via pydantic
 pydantic-settings==2.10.1
     # via mcp
-pydeck==0.9.1
-    # via streamlit
 pygments==2.19.2
     # via rich
 pyjwt==2.10.1
     # via mcp-for-db (pyproject.toml)
 pymysql==1.1.1
-    # via
-    #   mcp-for-db (pyproject.toml)
-    #   aiomysql
-pyparsing==3.2.3
-    # via matplotlib
+    # via aiomysql
 pypinyin==0.54.0
     # via mcp-for-db (pyproject.toml)
-python-dateutil==2.9.0.post0
-    # via
-    #   matplotlib
-    #   pandas
 python-dotenv==1.1.1
     # via
     #   mcp-for-db (pyproject.toml)
@@ -162,14 +85,10 @@ python-dotenv==1.1.1
     #   pydantic-settings
 python-multipart==0.0.20
     # via mcp
-pytz==2025.2
-    # via pandas
 referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
-requests==2.32.4
-    # via streamlit
 rich==14.0.0
     # via typer
 rpds-py==0.26.0
@@ -178,51 +97,32 @@ rpds-py==0.26.0
     #   referencing
 shellingham==1.5.4
     # via typer
-six==1.17.0
-    # via python-dateutil
-smmap==5.0.2
-    # via gitdb
 sniffio==1.3.1
-    # via
-    #   anyio
-    #   openai
+    # via anyio
 sqlparse==0.5.3
     # via mcp-for-db (pyproject.toml)
 sse-starlette==2.4.1
     # via mcp
 starlette==0.47.1
-    # via mcp
-streamlit==1.46.1
-    # via mcp-for-db (pyproject.toml)
-tenacity==9.1.2
-    # via streamlit
-toml==0.10.2
-    # via streamlit
-tornado==6.5.1
-    # via streamlit
-tqdm==4.67.1
-    # via openai
+    # via
+    #   mcp-for-db (pyproject.toml)
+    #   mcp
 typer==0.16.0
     # via mcp
 typing-extensions==4.14.1
     # via
-    #   altair
     #   anyio
-    #   openai
     #   pydantic
     #   pydantic-core
     #   referencing
     #   starlette
-    #   streamlit
     #   typer
     #   typing-inspection
 typing-inspection==0.4.1
     # via
     #   pydantic
     #   pydantic-settings
-tzdata==2025.2
-    # via pandas
-urllib3==2.5.0
-    # via requests
 uvicorn==0.35.0
-    # via mcp
+    # via
+    #   mcp-for-db (pyproject.toml)
+    #   mcp
