--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -1,28 +1,12 @@
 # MySQL数据库配置
-#MYSQL_HOST=localhost
-#MYSQL_PORT=13308
-#MYSQL_USER=videx
-#MYSQL_PASSWORD=password
-#MYSQL_DATABASE=tpch_tiny
-
-#MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-#MYSQL_PORT=3306
-#MYSQL_USER=onedba
-#MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-#MYSQL_DATABASE=du_trade_timeout_db_3
-#MYSQL_ROLE=readonly
-#DB_CONNECTION_TIMEOUT=5
-
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
-
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
 DB_CONNECTION_TIMEOUT=5
-# MySQL 8.0 认证插件配置
+# MySQL 认证插件配置
 DB_AUTH_PLUGIN=caching_sha2_password
-
 # 数据库连接池配置
 # 是否启用连接池 (true/false)
 DB_POOL_ENABLED=true
@@ -50,25 +34,19 @@ PORT=3000
 # 环境类型
 # development: 开发环境，较少限制
 # production: 生产环境，严格安全限制
-ENV_TYPE=development
-
+ENV_TYPE=production
 # 安全配置
 # 允许的风险等级: LOW(查询), MEDIUM(安全修改), HIGH(结构变更), CRITICAL(危险操作)
 ALLOWED_RISK_LEVELS=LOW
-
 # 是否允许查询敏感字段信息(密码，凭证等)
 ALLOW_SENSITIVE_INFO=false
-
 # 最大SQL语句长度限制
 MAX_SQL_LENGTH=2000
-
 # 阻止的SQL模式，多个模式用逗号分隔
 # 例如: 'DROP TABLE,DROP DATABASE,DELETE FROM' 将阻止包含这些字符串的查询
 BLOCKED_PATTERNS='DROP TABLE,DROP DATABASE,DELETE FROM'
-
 # 是否启用查询安全检查
 ENABLE_QUERY_CHECK=true
-
 # 数据库隔离配置
 # 是否启用数据库隔离（防止跨数据库访问）
 ENABLE_DATABASE_ISOLATION=false
