--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # MySQL数据库配置
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
