--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -1,10 +1,9 @@
 # MySQL数据库配置
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba #archive"
-
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
 DB_CONNECTION_TIMEOUT=5
 # MySQL 认证插件配置
 DB_AUTH_PLUGIN=caching_sha2_password
@@ -21,12 +20,10 @@ DB_POOL_RECYCLE=300
 DB_POOL_MAX_LIFETIME=0
 # 获取连接超时时间（秒）
 DB_POOL_ACQUIRE_TIMEOUT=10.0
-
 # 登录页面配置
 MCP_LOGIN_URL=http://localhost:3000/login
 OAUTH_USER_NAME=admin
 OAUTH_USER_PASSWORD=admin
-
 # 服务器配置
 # 服务器监听地址
 HOST=127.0.0.1
