--- a/src/server/config/.env
+++ b/src/server/config/.env
@@ -1,9 +1,9 @@
 # MySQL数据库配置
-MYSQL_HOST=rm-uf6pyrv408i5f0gap.mysql.rds.aliyuncs.com
-MYSQL_PORT=3306
-MYSQL_USER=onedba
-MYSQL_PASSWORD=S9dKSCsdJm(mKd2
-MYSQL_DATABASE=du_trade_timeout_db_3
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
 DB_CONNECTION_TIMEOUT=5
 # MySQL 认证插件配置
 DB_AUTH_PLUGIN=caching_sha2_password
