--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-# 大模型接口配置
-OPENAI_API_KEY=sk-xxx
-BASE_URL=https://api.openai.com/v1
-MODEL=gpt-4-turbo
+# 使用 OpenAI 兼容接口: 阿里云qwen模型配置
+DASHSCOPE_API_KEY=sk-54a3251d87d64b2e91d567cbcdffb3d2
+BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+MODEL=qwen-plus
+
+# OpenAI
+# OPENAI_API_KEY=your_openai_api_key
+# MODEL=gpt-3.5-turbo
