--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [project]
-name = "mcp-for-db"
-version = "0.9.0"
+name = "mcp_for_db"
+version = "1.0.0"
 license = { text = "MIT" }
-description = "Multi-service MCP server supporting databases and AI services"
+description = "Multi-service MCP server supporting databases and AI services with FastAPI client"
 readme = "README.md"
 requires-python = ">=3.12"
+authors = [
+    { name = "flyboy711", email = "flyboy711@example.com" }
+]
+keywords = ["mcp", "database", "ai", "fastapi", "mysql", "dify"]
+
 dependencies = [
     "cryptography>=42.0.6",
     "openai>=1.83.0",
@@ -22,14 +27,23 @@ dependencies = [
     "numpy>=2.3.0",
     "nacos-sdk-python>=0.1.16",
     "fastapi>=0.115.12",
-    "aiohttp>=3.4.0"
+    "aiohttp>=3.4.0",
+    "pydantic>=2.5.0",
+    "python-multipart>=0.0.6",
+    "httpx>=0.25.0",
+    "dashscope>=1.17.0",
+    "anthropic>=0.7.0",
 ]
 
-# 多个服务的控制台脚本入口
+# 服务器和客户端脚本入口
 [project.scripts]
-mcp_multi = "mcp_for_db.server.cli.main:stdio_entry"
+# 原有的服务器入口
+mcp_for_db = "mcp_for_db.server.cli.main:stdio_entry"
 mcp_mysql = "mcp_for_db.server.cli.mysql_entry:main"
 mcp_dify = "mcp_for_db.server.cli.dify_entry:main"
+# 客户端API入口
+mcp_api = "mcp_for_db.client.api:main"
+mcp_client = "mcp_for_db.client.client:main"
 
 [build-system]
 requires = ["hatchling"]
