--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ aiohttp==3.12.15
     # via
     #   mcp-for-db (pyproject.toml)
     #   alibabacloud-tea
+    #   dashscope
     #   nacos-sdk-python
 aiomysql==0.2.0
     # via mcp-for-db (pyproject.toml)
@@ -68,8 +69,11 @@ alibabacloud-tea-xml==0.0.3
     # via alibabacloud-tea-openapi
 annotated-types==0.7.0
     # via pydantic
+anthropic==0.61.0
+    # via mcp-for-db (pyproject.toml)
 anyio==4.9.0
     # via
+    #   anthropic
     #   httpx
     #   mcp
     #   openai
@@ -102,8 +106,13 @@ cryptography==45.0.5
     #   mcp-for-db (pyproject.toml)
     #   alibabacloud-darabonba-signature-util
     #   alibabacloud-openapi-util
+    #   dashscope
+dashscope==1.24.1
+    # via mcp-for-db (pyproject.toml)
 distro==1.9.0
-    # via openai
+    # via
+    #   anthropic
+    #   openai
 fastapi==0.116.1
     # via mcp-for-db (pyproject.toml)
 frozenlist==1.7.0
@@ -120,6 +129,8 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via
+    #   mcp-for-db (pyproject.toml)
+    #   anthropic
     #   mcp
     #   openai
 httpx-sse==0.4.1
@@ -135,7 +146,9 @@ immutables==0.21
 jinja2==3.1.6
     # via mcp-for-db (pyproject.toml)
 jiter==0.10.0
-    # via openai
+    # via
+    #   anthropic
+    #   openai
 jsonschema==4.24.0
     # via mcp
 jsonschema-specifications==2025.4.1
@@ -174,6 +187,8 @@ pycryptodome==3.23.0
     # via nacos-sdk-python
 pydantic==2.11.7
     # via
+    #   mcp-for-db (pyproject.toml)
+    #   anthropic
     #   fastapi
     #   mcp
     #   nacos-sdk-python
@@ -197,13 +212,17 @@ python-dotenv==1.1.1
     #   mcp
     #   pydantic-settings
 python-multipart==0.0.20
-    # via mcp
+    # via
+    #   mcp-for-db (pyproject.toml)
+    #   mcp
 referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.4
-    # via alibabacloud-tea
+    # via
+    #   alibabacloud-tea
+    #   dashscope
 rich==14.0.0
     # via typer
 rpds-py==0.26.0
@@ -214,6 +233,7 @@ shellingham==1.5.4
     # via typer
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   openai
 sqlparse==0.5.3
@@ -232,6 +252,7 @@ typer==0.16.0
 typing-extensions==4.14.1
     # via
     #   aiosignal
+    #   anthropic
     #   anyio
     #   fastapi
     #   openai
@@ -253,5 +274,7 @@ uvicorn==0.35.0
     # via
     #   mcp-for-db (pyproject.toml)
     #   mcp
+websocket-client==1.8.0
+    # via dashscope
 yarl==1.20.1
     # via aiohttp
