--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,9 @@ dependencies = [
 # 服务器和客户端脚本入口
 [project.scripts]
 # 原有的服务器入口
-mcp_for_db = "mcp_for_db.server.cli.main:stdio_entry"
-mcp_mysql = "mcp_for_db.server.cli.mysql_entry:main"
-mcp_dify = "mcp_for_db.server.cli.dify_entry:main"
+mcp_for_db = "mcp_for_db.server.cli.main:main"
+mcp_mysql = "mcp_for_db.server.cli.mysql_cli:mysql_main"
+mcp_dify = "mcp_for_db.server.cli.dify_cli:dify_main"
 # 客户端API入口
 mcp_api = "mcp_for_db.client.api:main"
 mcp_client = "mcp_for_db.client.client:main"
