--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/   # 忽略Python字节码缓存目录
 
 ### 虚拟环境 ###
 venv/          # 虚拟环境目录
-.env/          # 虚拟环境目录（常见命名）
+mcp_for_db/envs/.env/          # 虚拟环境目录（常见命名）
 .venv/         # 虚拟环境目录（常见命名）
 env/           # 虚拟环境目录（常见命名）
 venv.bak/      # 虚拟环境备份
