--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ requires-python = ">=3.12"
 authors = [
     { name = "flyboy711", email = "flyboy711@example.com" }
 ]
-keywords = ["mcp", "database", "ai", "fastapi", "mysql", "dify"]
+keywords = ["mcp", "database", "ai"]
 
 dependencies = [
     "cryptography>=42.0.6",
-    "openai>=1.83.0",
+    "openai>=1.92.0",
+    "fastapi>=0.116.0",
     "mcp[cli]>=1.3.0",
     "mysql-connector-python>=9.2.0",
     "python-dotenv>=0.16.0",
@@ -21,29 +22,28 @@ dependencies = [
     "jinja2>=2.11.3",
     "PyJWT>=2.8.0",
     "sqlparse>=0.5.2",
-    "contextvars>=2.0",
     "starlette>=0.46.1",
     "uvicorn>=0.34.0",
     "numpy>=2.3.0",
     "nacos-sdk-python>=0.1.16",
-    "fastapi>=0.115.12",
     "aiohttp>=3.4.0",
     "pydantic>=2.5.0",
     "python-multipart>=0.0.6",
     "httpx>=0.25.0",
     "dashscope>=1.17.0",
     "anthropic>=0.7.0",
+    "hatchling>=1.26.0"
 ]
 
 # 服务器和客户端脚本入口
 [project.scripts]
-# 原有的服务器入口
+# 服务端入口
 mcp_for_db = "mcp_for_db.server.cli.main:main"
 mcp_mysql = "mcp_for_db.server.cli.mysql_cli:mysql_main"
 mcp_dify = "mcp_for_db.server.cli.dify_cli:dify_main"
 # 客户端API入口
 mcp_api = "mcp_for_db.client.api:main"
-mcp_client = "mcp_for_db.client.client:main"
+mcp_client = "mcp_for_db.client.client:cli_main"
 
 [build-system]
 requires = ["hatchling"]
