测试FastAPI+Client+Server

--- a/mcp_for_db/envs/.env
+++ b/mcp_for_db/envs/.env
@@ -6,3 +6,24 @@ MODEL=qwen-plus
 # OpenAI
 # OPENAI_API_KEY=your_openai_api_key
 # MODEL=gpt-3.5-turbo
+
+# MySQL数据库连接配置
+MYSQL_HOST=localhost
+MYSQL_PORT=13308
+MYSQL_USER=videx
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=tpch_tiny
+
+# dify 访问基地址
+DIFY_BASE_URL=https://aistudio.dewu-inc.com/v1
+#DIFY_BASE_URL=https://ep-llmops.shizhuang-inc.com/v1
+# API key
+DIFY_API_KEY=dataset-2v5Y9RVF6YJtHNaog49RlZR7
+# 数据库选型白皮书
+#DIFY_API_KEY=dataset-diCeijJ4SmVprUeBIqdGGXCg
+# 知识库 ID
+#DIFY_DATASET_ID=59c01569-132b-479f-b1eb-34ab3cfe4dfb
+# ocasebase
+DIFY_DATASET_ID=03918555-2466-4a7d-b7cd-b30d973934eb
+# 数据库选型白皮书
+#DIFY_DATASET_ID=0152b9b2-724b-4e26-9e86-e81150a3404a
