新增docker部署启动方式

--- a/mcp_for_db/envs/.env
+++ b/mcp_for_db/envs/.env
@@ -1,5 +1,5 @@
 # 使用 OpenAI 兼容接口: 阿里云qwen模型配置
-DASHSCOPE_API_KEY=sk-54a3251d87d64b2e91d567cbcdffb3d2
+DASHSCOPE_API_KEY=sk-
 BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 MODEL=qwen-plus
 
